--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+/* index.css or App.css */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 3px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: #222;
+}
